just changed some affiliation stuff

--- a/Journal/99_main.tex
+++ b/Journal/99_main.tex
@@ -15,7 +15,7 @@
 \definechangesauthor[name={Zoltan}, color=blue]{zoltan}
 \definechangesauthor[name={Johannes}, color=cyan]{johannes}
 \definechangesauthor[name={Prageeth2}, color=magenta]{pj2}
-%\usepackage[normalem]{ulem}
+\usepackage[normalem]{ulem}
 
 %Flowcharts
 \usepackage[latin1]{inputenc}
@@ -78,19 +78,19 @@
 %Numerical Energy Analysis of PV Modules as Adaptive Building Shading Systems
 
 
-\author[ita]{P. Jayathissa\corref{cor2}}
-    \ead{jayathissa@arch.ethz.ch}
-\address[ita]{Architecture and Building Systems, Institute of Technology in Architecture, Department of Architecture, ETH Zurich, Switzerland} 
+\author[buds]{P. Jayathissa\corref{cor2}}
+    \ead{p.jayathissaa@nus.edu.sg}
+\address[buds]{Building and Urban Data Science Group,  Department of Building, Singapore} 
 % For whatever reason the affiliation needs to be defined after the authors. Otherwise the numbering gets messed up.
 
-\author[ita]{J. Zarb}
+\author[buds]{M. Author2}
   \ead{zarbj@student.ethz.ch}
 
 
-\author[ita]{M. Luzzatto}
+\author[buds]{M. Author3}
     \ead{maurol@student.ethz.ch}
 
-\author[ita]{J. Hofer}
+\author[buds]{J. author4}
     \ead{hofer@arch.ethz.ch}
 
 % \author[aut]{Z. Nagy}
@@ -98,8 +98,8 @@
 % \address[aut]{Intelligent Environments Laboratory, Department of Civil, Architectural and Environmental Engineering,\\ The University of Texas at Austin, USA}
 
 
-\author[ita]{A. Schlueter \corref{cor1} }
-    \ead{schlueter@arch.ethz.ch}
+\author[buds]{C. Miller \corref{cor1} }
+    \ead{clayton@nus.edu.sg}
 
 
 \cortext[cor2]{Corresponding author}
